# zero2prod

./: API.md  Cargo.toml  Dockerfile  PROJECT_OVERVIEW.md  README.md  rust-toolchain.toml  spec.yaml
.github/workflows/: audit.yml
configuration/: base.yaml  production.yaml
docs/: concurrency_and_idempotency.md
examples/: raw_string.rs
migrations/: 20230928092234_make_status_not_null_in_subscriptions.sql  20230928092627_create_subscription_tokens_table.sql  20231017152542_rename_password_column.sql  20231025115810_seed_user.sql  20231104040427_relax_null_checks_on_idempotency.sql  20231104165638_create_newsletter_issues_table.sql  20231104170559_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: persistence.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletters/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
