[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
config = "0.11"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7"
serde-aux = "3"
unicode-segmentation = "1"
validator = "0.16.1"
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "1"
anyhow = "1"
base64 = "0.13"
argon2 = { version = "0.5", features = ["std"] }
urlencoding = "2"
htmlescape = "0.3"
actix-web-flash-messages = { version = "0.3", features = ["cookies"] }
actix-session = { version = "0.11", features = ["redis-session-rustls"] }
serde_json = "1"
actix-web-lab = "0.20"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
once_cell = "1"
claim = '0.5'
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5"
linkify = "0.8"
serde_urlencoded = "0.7"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"
